# CppStuff

./: .clang-format  .clang-tidy  .gitignore  GNUmakefile  Makefile  Makefile.macOS  README.md  any_of.cpp  backtracking_queens.cpp  bacterial_tactics.cpp  book_reading.cpp  build-g++-8.sh  build-g++-9.sh  charstats.cpp  commit_messages.md  competition_init.cpp  competition_template.cpp  connected_region.cpp  convex_hull.cpp  cpp_snippets.cppcheck  currency_rate_avarege.cpp  cxx_flags  find_concatenated.cpp  fuzz.cpp  intersect_1d.cpp  key_index_sort.cpp  locale-linux.cpp  locale-win.cpp  makefile  nrun.bat  pairs_sum.cpp  parenthesis_quest.cpp  permute.cpp  producer_consumer.cpp  recommendations.md  robot_strategy.cpp  second_to_last_delete.cpp  shortest_path.cpp  squares_sum.cpp  team_selection.cpp  (+2 more)
classic/: 2sat.cpp  activity_selection.cpp  actor.cpp  arith_expr_target.cpp  arpa_rmq.cpp  backtracking_queens.cpp  bezouts_coefficients.cpp  biconnected_components.cpp  bignum.cpp  binary_exponentiation.cpp  binary_search.cpp  binominal_coefficient.cpp  bipartite_matching.cpp  cache.cpp  chinese_reminder_theorem.cpp  connected_region.cpp  convex_hull.cpp  desctree.cpp  digits.cpp  digraph.cpp  duplicates_in_range.cpp  extremal_element.cpp  fraction.cpp  graph.cpp  kd_tree.cpp  (+69 more)
freestyle-c/numf/: CMakeLists.txt  numf.c  numf.h  numf_ncur.c  numf_ncur.h
freestyle/producer_consumer_non_uniform/shmem/: CMakeLists.txt  CMakeSettings.json  common.h  consumer.cpp  producer.cpp
freestyle/producer_consumer_non_uniform/socket/: CMakeLists.txt  common.h  consumer.cpp  producer.cpp
(+464 files in other folders)
